Delete function in search

--- a/src/assets/locales/en/en.json
+++ b/src/assets/locales/en/en.json
@@ -56,7 +56,8 @@
     "buttonSearch": "Search",
     "all": "All",
     "admin": "Admin",
-    "user": "User"
+    "user": "User",
+    "buttonClear": "Clear"
   },
 
   "tableContainer": {
