--- a/src/assets/locales/en/en.json
+++ b/src/assets/locales/en/en.json
@@ -75,7 +75,8 @@
     "user": "user",
     "page": "Page",
     "update": "Update",
-    "delete": "Delete"
+    "delete": "Delete",
+    "deleteNotify": "This user cannot be deleted."
   },
 
   "updateUserContainer": {
@@ -103,6 +104,7 @@
     "apply": "Apply",
     "cancel": "Cancel",
     "message": "Do you want to delete user?",
-    "title": "Delete user"
+    "title": "Delete user",
+    "warning": "Warning!!"
   }
 }
