--- a/src/assets/locales/en/en.json
+++ b/src/assets/locales/en/en.json
@@ -72,7 +72,8 @@
     "labelRowsPerPage": "Rows per page:",
     "of": "of",
     "display": "Display",
-    "user": "user",
+    "user": "User",
+    "admin": "Admin",
     "page": "Page",
     "update": "Update",
     "delete": "Delete",
